# Screenwrite_MVP

./: .env.example  .gitignore  BACKEND_REFACTOR_PLAN.md  ELEMENT_REFACTOR_SUMMARY.md  ENDPOINT_MIGRATION.md  GCS_MIGRATION_PLAN.md  PHASE_1.2_SETUP.md  SERVERS_RUNNING.md  package.json  pnpm-lock.yaml  test_composition_generation.py  vite-env.d.ts  vite.config.ts
backend/: Dockerfile  STRING_SCHEMA_IMPLEMENTATION.md  agent_prompts.py  auth.py  blueprint_parser.py  code_generator.py  element_schemas.py  gcs_storage.py  main.py  prompts.py  providers.py  pyproject.toml  schema.py
backend/api/: agent_router.py  analysis_router.py  composition_router.py  media_router.py  upload_router.py
backend/business_logic/: analyze_media.py  fetch_media.py  generate_composition.py  generate_media.py  invoke_agent.py
backend/core/: config.py  dependencies.py
backend/models/requests/: AgentRequest.py  BatchMediaAnalysisRequest.py  CompositionGenerationRequest.py  MediaAnalysisRequest.py  MediaGenerationRequest.py  StockMediaSearchRequest.py
backend/models/responses/: AgentResponse.py  BatchMediaAnalysisResponse.py  CompositionGenerationResponse.py  MediaAnalysisResponse.py  MediaGenerationResponse.py  MediaUploadResponse.py  StockMediaSearchResponse.py
backend/prompts/: agent_prompts.py  composition_prompts.py
backend/rag/: .gitignore  README.md  __init__.py  build_embeddings.py  llm_selector.py  retriever.py
backend/services/: __init__.py
backend/tests/: test_analysis_api.sh  test_media_api.sh  test_stock_api.sh  test_upload_api.sh
backend/utils/: naming.py
(+129 files in other folders)
