[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.42.0",
    "fastapi>=0.115.13",
    "google-cloud-aiplatform>=1.120.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-texttospeech>=2.17.2",
    "google-generativeai>=0.8.5",
    "httpx>=0.27.0",
    "instructor>=1.8.2",
    "numpy>=2.0.0",
    "openai>=1.59.0",
    "pillow>=11.3.0",
    "pydantic-settings>=2.11.0",
    "pydub>=0.25.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "rembg[cpu]>=2.0.67",
    "supabase>=2.22.0",
    "uvicorn>=0.34.3",
]
